# CSDMPY

./: .gitignore  README.md  calibrate_inferno.py  calibration_tool.py  check_demo_data.py  debug_coordinates.py  debug_visual_elements.py  fix_dependencles.py  pyproject.toml  requirements.txt  test_calibration.py  test_database.py  test_maps.py  test_parser.py
data/: cs_demos.db
src/: __init__.py  main.py
src/core/: __init__.py  data_processor.py  demo_parser.py  map_renderer.py  models.py
src/database/: __init__.py  database.py  models.py  repository.py
src/gui/: __init__.py  demo_viewer.py  main_window.py  matches_browser.py  parser_worker.py  stats_panel.py
src/gui/widgets/: __init__.py  playback_controls.py
src/utils/: __init__.py  config.py  logger.py  map_config.py  radar_calibration.py  weapon_icons.py
tests/: __init__.py
